# JNIOOR

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/tech/huqi/jnioor/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/third_part/include/: JniReflect.h  Transform.h  common.h
app/src/main/java/tech/huqi/jnioor/: MainActivity.java  Sample.java
app/src/main/res/values/: strings.xml
app/src/test/java/tech/huqi/jnioor/: ExampleUnitTest.java
reflect/: build.gradle
reflect/src/androidTest/java/tech/huqi/jnioor/: ExampleInstrumentedTest.java
reflect/src/main/: AndroidManifest.xml
reflect/src/main/cpp/: CMakeLists.txt  JniReflect.cpp  Transform.cpp
